@@ -6,6 +6,7 @@ Enhancements:
 - #7505 Remove static link of libportal from Debian Trixie CI
 - #7506 Make `APPLE_CODESIGN_ID` env var optional for CE CI
 - #7507 Add `run-retry` action to workaround `integtest` `gcovr` issue
+- #7509 Use GitHub vars to determine custom runner names
 
 # 1.16.0
 
